# sysatlas

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: publish.yml
docs/: README.md  builders.md  design-principles.md  state-of-the-art.md  todo.md
docs/demos/: README.md  architecture.py  bpmn.py  er.py  hub.py  multi_view.py  qualities.py  sequence.py  state_machine.py  trace_matrix.py  tree.py  uml_class.py
docs/issues/: reflection.md
docs/ontology/: README.md  architecture.md  bpmn.md  er.md  iso42010.md  model_kinds.md  qualities.md  sequence.md  state_machine.md  trace.md  tree.md  uml_class.md
docs/reflection/: README.md  loops.html  loops.py  module-map.html  module-map.py
examples/: quickstart.py
scripts/: regen_demos.py
sysatlas/: LLM_GUIDE.md  __init__.py  _bpmn_layout.py  _bpmn_render.py  _class_layout.py  _class_render.py  _connectors.py  _er_layout.py  _er_render.py  _hub_layout.py  _layout.py  _place.py  _render.py  _route.py  _sequence_layout.py  _sequence_render.py  _state_layout.py  _state_render.py  _trace_matrix.py  _tree_layout.py  _tree_render.py  _vendor.py  bpmn_map.py  class_map.py  er_map.py  sequence_map.py  state_map.py  sysatlas.json  system.py  system_map.py  tree_map.py
tests/: test_bpmn_map_logic.py  test_class_map_logic.py  test_er_map_logic.py  test_hub_layout_logic.py  test_model_kind_logic.py  test_reflection_hints.py  test_reflection_merge.py  test_reflection_parser.py  test_reflection_reflect.py  test_sequence_map_logic.py  test_state_map_logic.py  test_system_map.py
(+31 files in other folders)
