[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sysatlas"
version = "0.1.0"
description = "Interactive system and architecture diagram library"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["architecture", "diagram", "topology", "visualization", "drawio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = ["networkx>=3.0", "pydantic>=2.0"]

[project.urls]
Homepage = "https://github.com/CServinL/sysatlas"
Repository = "https://github.com/CServinL/sysatlas"
Issues = "https://github.com/CServinL/sysatlas/issues"

[tool.hatch.build.targets.wheel]
packages = ["sysatlas"]

[tool.hatch.build.targets.wheel.force-include]
"sysatlas/LLM_GUIDE.md" = "sysatlas/LLM_GUIDE.md"
